hphp/test/zend/bad/ext/opcache/tests/bug65510.php
<?php
function parseQuery() {
    $m = array("l", "a", "r", "u", "e", "n", "c", "e");
    foreach($m as $n) {
        @list($a, $b) = $n;
    }
}
parseQuery();
echo "ok\n";